<resources>
    <string name="app_name">Factory mobile</string>
    <string name="password">Password</string>
    <string name="write_your_login">Write your login</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sign_up_form">Sign up form</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="main_menu">Main menu</string>
    <string name="sign_out">Sign out</string>
    <string name="filter_statistic">Filter statistic</string>
    <string name="your_profile">Your profile</string>
    <string name="back">Back</string>
    <string name="mark_form">Mark form</string>
    <string name="mark">Mark</string>
    <string name="mark_work_day_form">Mark work day form</string>
    <string name="your_points">Your points</string>
    <string name="you_marked_today_good_luck_and_work_carefully">You marked today! Good luck and work carefully!</string>
</resources>
